# localmotive

./: .gitignore  README.md  package.json
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/analyzer/: ast_extraction.rs  complexity.rs  mod.rs  symbol_table.rs  tree_sitter.rs
src-tauri/src/commands/: config.rs  mod.rs  pipeline.rs  preview.rs  project.rs  publish.rs
src-tauri/src/export/: mod.rs  statistics.rs
src-tauri/src/formatter/: alpaca.rs  chatml.rs  fim.rs  llama.rs  mistral.rs  mod.rs  openai.rs  sharegpt.rs
src-tauri/src/generator/: bug_detection.rs  code_completion.rs  code_qa.rs  documentation.rs  mod.rs  multi_turn.rs  repo_context.rs  tool_calling.rs  tools.rs  types.rs
src-tauri/src/pipeline/: cache.rs  config.rs  mod.rs  orchestrator.rs  progress.rs
src-tauri/src/publish/: card.rs  client.rs  mod.rs  types.rs
src-tauri/src/quality/: autogen_detect.rs  dedup.rs  filters.rs  mod.rs  token_counter.rs
src-tauri/src/scanner/: discovery.rs  file_info.rs  language.rs  mod.rs  readme.rs  walker.rs
src/lib/: utils.ts
src/lib/api/: index.ts  invoke.ts  types.ts
src/lib/stores/: projects.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/generate/: +page.svelte
src/routes/preview/: +page.svelte
src/routes/progress/: +page.svelte
src/routes/settings/: +page.svelte
